WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73091
[Chromium] WebGL viewport corrupted after compositor update
https://bugs.webkit.org/show_bug.cgi?id=73091
Summary
[Chromium] WebGL viewport corrupted after compositor update
Jeff Timanus
Reported
2011-11-24 13:04:40 PST
The viewport parameters are altered after a call to DrawingBuffer::bind, which is called during DrawingBuffer::publishToPlatformLayer. This is the cause of rendering artifacts in Angry Birds, tracked at the following issue: crbug.com/104678
Attachments
Patch
(1.31 KB, patch)
2011-11-24 13:12 PST
,
Jeff Timanus
no flags
Details
Formatted Diff
Diff
Patch
(4.96 KB, patch)
2011-11-25 08:53 PST
,
Jeff Timanus
no flags
Details
Formatted Diff
Diff
Patch
(5.10 KB, patch)
2011-11-25 11:33 PST
,
Jeff Timanus
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jeff Timanus
Comment 1
2011-11-24 13:12:24 PST
Created
attachment 116535
[details]
Patch
Jeff Timanus
Comment 2
2011-11-24 13:14:10 PST
(In reply to
comment #1
)
> Created an attachment (id=116535) [details] > Patch
Thanks to Stephen White for help tracking this down. I'm looking into writing a corresponding layout test.
Jeff Timanus
Comment 3
2011-11-25 08:53:50 PST
Created
attachment 116630
[details]
Patch
Jeff Timanus
Comment 4
2011-11-25 11:33:35 PST
Created
attachment 116635
[details]
Patch
Jeff Timanus
Comment 5
2011-11-25 11:37:22 PST
Comment on
attachment 116635
[details]
Patch Patch tested against the WebGL conformance tests on linux, with no new regressions.
Stephen White
Comment 6
2011-11-25 12:33:11 PST
Comment on
attachment 116635
[details]
Patch Looks good. Thanks for the test! r=me
WebKit Review Bot
Comment 7
2011-11-25 13:53:13 PST
Comment on
attachment 116635
[details]
Patch Clearing flags on attachment: 116635 Committed
r101181
: <
http://trac.webkit.org/changeset/101181
>
WebKit Review Bot
Comment 8
2011-11-25 13:53:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug