[Chromium] The DrawingBuffer::bind method was incorrectly resetting the GL viewport parameters. This was unnecessary, and resulted in the corruption of the WebGL context's state. https://bugs.webkit.org/show_bug.cgi?id=73091

Patch by Jeff Timanus <twiz@chromium.org> on 2011-11-25
Reviewed by Stephen White.

Tests: fast/canvas/webgl/webgl-viewport-parameters-preserved.html

Source/WebCore:

* platform/graphics/gpu/DrawingBuffer.cpp:
(WebCore::DrawingBuffer::bind):

LayoutTests:

* fast/canvas/webgl/webgl-viewport-parameters-preserved-expected.txt: Added.
* fast/canvas/webgl/webgl-viewport-parameters-preserved.html: Added.

Canonical link: https://commits.webkit.org/89662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101181 268f45cc-cd09-0410-ab3c-d52691b4dbfc